--- a/practice/practice.html
+++ b/practice/practice.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <script>
         const hello = () =>{
-            alert('Hello world!');
+            document.querySelector('h1').innerHTML="good bye";
         }
         
         
