--- a/practice/practice.html
+++ b/practice/practice.html
@@ -4,21 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script>
-        let counter= 0;
-        const count = () =>{
-            counter++;   
-            document.querySelector('h1').innerHTML = counter;               
-            if (counter % 10 === 0){
-                alert(`Count is now ${counter}`);
-            }
-        }
-        document.addEventListener('DOMContentLoaded', function(){
-            document.querySelector('button').onclick = count;
-        })
-       
-        
-    </script>
+    <script src="practice.js"></script>
 </head>
 <body>
     <button>count</button>
