--- a/practice/practice.html
+++ b/practice/practice.html
@@ -7,7 +7,9 @@
     <script src="practice.js"></script>
 </head>
 <body>
-    <button>count</button>
-    <h1>0</h1>
+    <form action="">
+        <input autofocus id="name" placeholder="Name" type="text">
+        <input type="submit">
+    </form>
 </body>
 </html>
