createElement ,value,disabled,onkeyup

--- a/practice/practice.html
+++ b/practice/practice.html
@@ -7,9 +7,16 @@
     <script src="practice.js"></script>
 </head>
 <body>
-    <form action="">
-        <input autofocus id="name" placeholder="Name" type="text">
-        <input type="submit">
+   
+    <h1>Tasks</h1>
+    <ul id="tasks">
+
+    </ul>
+
+    <form >
+        <input id="task" placeholder="new task" type="text">
+        <input id="submit" type="submit">
     </form>
+
 </body>
 </html>
