forEach , dataset , style.something, querySelectorAll, addEventListener

--- a/practice/practice.html
+++ b/practice/practice.html
@@ -8,15 +8,10 @@
 </head>
 <body>
    
-    <h1>Tasks</h1>
-    <ul id="tasks">
-
-    </ul>
-
-    <form >
-        <input id="task" placeholder="new task" type="text">
-        <input id="submit" type="submit">
-    </form>
+    <h1 id="hello">HELLO</h1>
+    <button data-color="red">red</button>
+    <button data-color="blue">blue</button>
+    <button data-color="green">green</button>
 
 </body>
 </html>
